--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: cithit/roseaw:latest            #<-------------change this!!!!
+        image: alir2/roseaw:latest            #<-------------change this!!!!
         ports:
         - containerPort: 80  # Expose NGINX on port 80        
 ---
